# context-optimizer

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  PRD.md  README.md  _boost_patch.bak  _choices_patch.bak  _chunk_size_patch.bak  _classify_patch.bak  _classify_v4_patch.bak  _main_patch.bak  _merge_patch.bak  architecture.mermaid.bak  eval_results_chunk.csv  eval_results_topk.csv  key_decisions.md  main.py  pyproject.toml  report.md  todo.txt
src/compression/: assembler.py  chunk_compressor.py  compressor.py  pipeline.py  sentence_compressor.py  sentence_splitter.py  summariser.py  topk_compressor.py  topk_sentence_compressor.py
src/evaluation/: bertscore_metric.py  harness.py  judge.py  landmark_recall.py
src/ingestion/: loader.py  models.py
src/landmarks/: detector.py  rule_detector.py
src/scoring/: keyword.py  query_classifier.py  recency.py  scorer.py  semantic.py
tests/: README.md  conftest.py  test_compression.py  test_evaluation.py  test_ingestion.py  test_landmarks.py  test_query_selection.py  test_scoring.py
utilities/: compression_audit.py  corpus_landmark_recall.py  corpus_stats.py  diagnose_recall.py  download_dialog2flow.py  download_oasst1.py  download_taskmaster2.py  inspect_datasets.py  inspect_poor_compressors.py  raw_turns.py  synthetic_audit.py  token_weight_audit.py  verify_classifiers.py  view_conversation.py  view_domain.py
