[project]
name = "context-optimizer"
version = "0.1.0"
description = "Intelligent context optimizer for multi-turn LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "openai>=1.30.0",
    "bert-score>=0.3.13",
    "pandas>=2.2.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]
